--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 						</ul>
 						<div class="socials">
 							
-							<a href="https://www.facebook.com/99oktrangchinhthuc" target="_blank"><img
+							<a href="https://www.facebook.com/99ok.sanchoiuytin/" target="_blank"><img
 									src="images/index/facebook.png" alt="telegram"></a>
 							<a href="https://t.me/DAILY99OK" target="_blank"><img
 									src="images/index/ĐẠI LÝ HỢP TÁC.png" alt="dndl"></a>
