--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <div class="social-links-container">
                 
                 <div class="social-item">
-                    <a href="https://www.facebook.com/99oktrangchinhthuc" target="_blank">
+                    <a href="https://www.facebook.com/99ok.sanchoiuytin/" target="_blank">
                         <img src="images/index/facebook-icon.png" alt="Fanpage Facebook">
                         <span>Fanpage Facebook</span>
                     </a>
